--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-<head></head>
+<head>
+  <link rel="stylesheet" href="/assets/antd.css">
+</head>
 
 <body>
     <div id="app"></div>
